--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="University Management System"
 APP_ENV=local
 APP_KEY=base64:pHmoQLhkRaYV67M7u4PyHIA21veDqCcrdTMvyIUJnHw=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://imsu.quickassistant.me
 
 LOG_CHANNEL=stack
